Configurando ambiente de teste

--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/gustavofreitasdev/formigaatomica/issues"
   },
-  "homepage": "https://github.com/gustavofreitasdev/formigaatomica#readme"
+  "homepage": "https://github.com/gustavofreitasdev/formigaatomica#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-pug": "^4.0.1"
+  }
 }
