--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/gustavofreitasdev/formigaatomica#readme",
   "devDependencies": {
+    "cytoscape": "^3.2.12",
     "gulp": "^3.9.1",
     "gulp-pug": "^4.0.1"
   }
