--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "cytoscape": "^3.2.12",
     "gulp": "^3.9.1",
-    "gulp-pug": "^4.0.1"
+    "gulp-clean": "^0.4.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.2.3",
+    "gulp-uglify": "^3.0.0"
   }
 }
