--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.2.3",
     "gulp-uglify": "^3.0.0",
-    "gulp-uglifycss": "^1.0.9"
+    "gulp-uglifycss": "^1.0.9",
+    "jquery": "^3.3.1"
   }
 }
